[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygitember"
version = "0.1.0"
description = "Geetember reimplementation in Python with PyQt6"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Geetember" }]
dependencies = [
  "PyQt6>=6.6",
  "pygit2>=1.14",
  "whoosh>=2.7.4",
  "filetype>=1.2.0",
  "Pygments>=2.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.6",
]

[project.scripts]
pygitember = "pygitember.app.main:main"


